--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,13 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   </head>
   <body>
-  <div class="container">
+ 
     <%= render 'users/header' %>
-  </div>
-
- <% if notice %>
-   
-  <% end %>
-  <div class="container">
+    <div class="container">
+    <% if notice %>
+      <%= render 'layouts/alert' %>
+    <% end %>
+    
      <%= yield %>
   </div>
 
