--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,22 +11,23 @@
     </div>
   <% end %>
 
-  <div class="field">
+
+  <div class="field form-group">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class:"form-control"%>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :password %>
-    <%= form.text_field :password %>
+    <%= form.text_field :password, class:"form-control", placeholder:"" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"btn btn-info" %>
   </div>
 <% end %>
