--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -7,32 +7,37 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      
+      <% if user_signed_in? %>
         <li class="nav-item">
-        <%= link_to 'ClubHouse Members', users_path, class:"nav-link" %>
+           <%= link_to 'ClubHouse Members', users_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Sign Out',  destroy_user_session_path, method: :delete, class:"nav-link" %>
+        </li>
         </li>
         <li class="nav-item">
-        <%= link_to 'Become A member', new_user_path, class:"nav-link" %>
+          <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
         </li>
-          <li class="nav-item">
-          <%= link_to 'Sign In', user_path, class:"nav-link" %>
+        <li class="nav-item">
+          <%= link_to 'All posts', user_session_path, class:"nav-link" %>
         </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Sign Out</a>
+
+        <li class="nav-item">
+          <%= link_to 'Create post', user_session_path, class:"nav-link" %>
         </li>
-        <%# <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li> %>
-        <%# <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> %>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to 'Become A member', new_user_registration_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign In', user_session_path, class:"nav-link" %>
+        </li>
+      <% end %>
+      
+
+       
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search Club Members" aria-label="Search">
