--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
@@ -7,7 +5,7 @@
 
 <p>
   <strong>Email:</strong>
-  <%= @user.email %>
+ 
 </p>
 
 <p>
@@ -15,5 +13,7 @@
   <%= @user.password %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+  <p>
+    <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-secondary" %> 
+    <%= link_to 'Back', users_path, class:"btn btn-dark" %>
+  </p>
