--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -25,7 +25,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to 'Create post', user_session_path, class:"nav-link" %>
+          <%= link_to 'Create post', new_post_path, class:"nav-link" %>
         </li>
       <% else %>
         <li class="nav-item">
