--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,26 +3,29 @@
   <thead class="table-dark">
     <tr>
       <th>Name</th>
-      <th>Email</th>
-      <th>Password</th>
-      <th colspan="3"></th>
+      <%# <th>Post</th> %>
+      <%# <th>Password</th> %>
+      <%# <th colspan="3"></th> %>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
+
         <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= link_to 'Show', user , class:"btn btn-info" %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) , class:"btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-danger" %></td>
+        <%= user.name %>
+        <%# <td><%= user.post %>
+        <%# <td><%= user.password %>
+
+        <%# <td><%= link_to 'Show', user , class:"btn btn-info" %>
+        <%# <td><%= link_to 'Edit', edit_user_path(user) , class:"btn btn-warning" %>
+        <%# <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-danger" %>
+
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
 
-<%= link_to 'New User', new_user_path, class:"btn btn-secondary" %>
+<%# <%= link_to 'New Post', new_post_path, class:"btn btn-info" %> 
